--- a/package.json
+++ b/package.json
@@ -6,8 +6,12 @@
     "react": "^16.3.2",
     "react-browser-router": "^2.1.1",
     "react-dom": "^16.3.2",
+    "react-redux": "^6.0.0",
+    "react-router-dom": "^4.2.2",
     "react-scripts": "1.1.4",
-    "react-router-dom": "^4.2.2"
+    "redux": "^4.0.1",
+    "redux-thunk": "^2.3.0",
+    "uuid-v4": "^0.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
